* Rewrite fuse.ajax.responders and fuse.ajax.Request to use custom class events. [jddalton]

* Add support for custom events to fuse.Class via the fuse.Class.mixins.event mixin. [jddalton]

* Break array/object references on the prototype when calling a constructor that is defined with an `initialize` method on its prototype. [jddalton]

* Make fuse.Class automatically break array/object references assigned to the prototype of a constructor when using addPlugins() and addMixins(). [jddalton]

* Make fuse.Object.clone() work with Array, Boolean, Number, RegExp, and String objects. [jddalton]

* Make the event object passed to delegate() masquerade as that of the matched element and add getDelegator() to the event object. [jddalton]

* Remove fuse.$break and allow returning false to exit out of an iteration method. [jddalton]

* Remove fuse.Object methods _extend() and _each(). [jddalton]

* Expose fuse.Object.isHostType(object, property). [jddalton]

* Fix memory leak caused by the closure around the framework. [jddalton]

* Add fuse.dom.Element, Document, and Window methods delegate(type, selector, handler) and stopDelegating([type, selector, handler]). [jddalton]

* Add fuse.dom.Document match()/query() method and nodeType property. [jddalton]

* Add method generics to fuse.dom.Event and make isLeftClick(), isMiddleClick(), and isRightClick() lazy define themselves. [jddalton]

* Move fuse.K to fuse.Function.IDENTITY and add fuse.Function.TRUE/fuse.Function.FALSE shortcut functions. [jddalton]
  Note: Backwards compatibility warning.

* Remove a reference to the window.document object in fuse.dom.Form#serializeElements. [jddalton]

* Ensure namespaces only inherit from the parent namespaces `plugin` property and not static properties. [jddalton]

* Reduce the number of private variables and standardize repeatedly used variable names for better minification. [jddalton]
