@@ -273,78 +273,6 @@ new Test.Unit.Runner({
     /* this.benchmark(function() { largeTextEscaped.unescapeHTML() }, 1000); */
   },
 
-  'testToQueryParams': function() {
-    // only the query part
-    var result = { 'a':undef, 'b':'c' };
-
-    this.assertHashEqual({ },
-      fuse.String('').toQueryParams(),
-      'empty query');
-
-    this.assertHashEqual({ },
-      fuse.String('foo?').toQueryParams(),
-      'empty query with URL');
-
-    this.assertHashEqual(result,
-      fuse.String('foo?a&b=c').toQueryParams(),
-      'query with URL');
-
-    this.assertHashEqual(result,
-      fuse.String('foo?a&b=c#fragment').toQueryParams(),
-      'query with URL and fragment');
-
-    this.assertHashEqual(result,
-      fuse.String('a;b=c').toQueryParams(';'),
-      'custom delimiter');
-
-    this.assertHashEqual({ 'a': undef },
-      fuse.String('a').toQueryParams(),
-      'key without value');
-
-    this.assertHashEqual({ 'a': 'b' },
-      fuse.String('a=b&=c').toQueryParams(),
-      'empty key');
-
-    this.assertHashEqual({ 'a': 'b', 'c': '' },
-      fuse.String('a=b&c=').toQueryParams(),
-      'empty value');
-
-    this.assertHashEqual({ 'a': 'b', 'c': undef },
-      fuse.Object.toQueryString(fuse.String('a=b&c').toQueryParams()).toQueryParams(),
-      'cross-convert containing an undefined value');
-
-    this.assertHashEqual({'a b':'c', 'd':'e f', 'g':'h' },
-      fuse.String('a%20b=c&d=e%20f&g=h').toQueryParams(),
-      'proper decoding');
-
-    this.assertHashEqual({ 'a':'b=c=d' },
-      fuse.String('a=b=c=d').toQueryParams(),
-      'multiple equal signs');
-
-    this.assertHashEqual({ 'a':'b', c:'d' },
-      fuse.String('&a=b&&&c=d').toQueryParams(),
-      'proper splitting');
-
-    this.assertEnumEqual($w('r g b'),
-      fuse.String('col=r&col=g&col=b').toQueryParams()['col'],
-      'collection without square brackets');
-
-    var msg = 'empty values inside collection';
-
-    this.assertEnumEqual(['r', '', 'b'],
-      fuse.String('c=r&c=&c=b').toQueryParams()['c'], msg);
-
-    this.assertEnumEqual(['', 'blue'],
-      fuse.String('c=&c=blue').toQueryParams()['c'],  msg);
-
-    this.assertEnumEqual(['blue', ''],
-      fuse.String('c=blue&c=').toQueryParams()['c'],  msg);
-
-    this.assertHashEqual(Fixtures.mixed_dont_enum,
-      fuse.String('a=A&b=B&toString=bar&valueOf=').toQueryParams(),
-      'Should not iterate over inherited properties.');
-  },
-
   'testInclude': function() {
     this.assert(fuse.String('hello world').contains('h'));
     this.assert(fuse.String('hello world').contains('hello'));
